--- a/Four Card Feature Section/four-card-feature-section-master/main.css
+++ b/Four Card Feature Section/four-card-feature-section-master/main.css
@@ -4,4 +4,65 @@
   font-family: "Poppins", sans-serif;
   font-weight: normal;
   font-size: 15px;
+  color: hsl(234, 12%, 34%);
+}
+
+#header {
+  text-align: center;
+}
+
+img {
+  margin-top: 2rem;
+  float: right;
+}
+
+p {
+  color: hsl(229, 6%, 66%);
+}
+
+body {
+  width: calc(100vw - 2rem);
+  padding: 1rem;
+  background-color: hsl(0, 0%, 98%);
+}
+
+h2 {
+  font-weight: 600;
+}
+
+h1 {
+  font-weight: 200;
+}
+
+#container {
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: 100%;
+}
+
+.card {
+  background-color: #ffffff;
+  padding: 1.75rem;
+  border-radius: 0.5rem;
+  box-shadow: 0px 5px 15px rgba(97, 155, 221, 0.2);
+}
+
+#supervisor {
+  border-top: 0.25rem solid hsl(180, 62%, 55%);
+}
+
+#team-builder {
+  border-top: 0.25rem solid hsl(0, 78%, 62%);
+}
+
+#karma {
+  border-top: 0.25rem solid hsl(34, 97%, 64%);
+}
+
+#calculator {
+  border-top: 0.25rem solid hsl(212, 86%, 64%);
+}
+
+footer {
+  text-align: center;
 }
