--- a/Four Card Feature Section/four-card-feature-section-master/main.css
+++ b/Four Card Feature Section/four-card-feature-section-master/main.css
@@ -21,8 +21,6 @@ p {
 }
 
 body {
-  width: calc(100vw - 4rem);
-  padding: 2rem;
   background-color: hsl(0, 0%, 98%);
 }
 
@@ -68,6 +66,15 @@ footer {
 }
 
 @media screen and (max-width: 400px) {
+  body {
+    width: calc(100vw - 4rem);
+    padding: 2rem;
+  }
+
+  .br {
+    display: none;
+  }
+
   h1 {
     font-size: 1.5rem;
     margin-top: 3.75rem;
@@ -101,5 +108,57 @@ footer {
 
   .card {
     margin-top: 1rem;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  body {
+    width: 100vw;
+    padding-top: 5rem;
+  }
+
+  #container {
+    display: grid;
+    gap: 2rem;
+    grid-template-columns: 1fr repeat(3, 22.75rem) 1fr;
+    grid-template-rows: repeat(6, 6.1255rem) auto;
+  }
+
+  #header {
+    grid-row: 1 / 3;
+    grid-column: 1 / 6;
+  }
+
+  #header > h1 {
+    font-size: 2.5rem;
+  }
+
+  #header > h2 {
+    font-size: 2.5rem;
+  }
+
+  #team-builder {
+    grid-row: 3 / 5;
+    grid-column: 3 / 4;
+  }
+
+  #supervisor {
+    grid-row: 4 / 6;
+    grid-column: 2 / 3;
+  }
+
+  #calculator {
+    grid-row: 4 / 6;
+    grid-column: 4 / 5;
+  }
+
+  #karma {
+    grid-row: 5 / 7;
+    grid-column: 3 / 4;
+  }
+
+  footer {
+    grid-row: 7;
+    grid-column: 1 / 6;
   }
 }
